@@ -21,6 +21,8 @@ CVS HEAD (2007-06-17):
   for compressed files.
 * Now using the new ld-tigcc switch --output-data-var to set the data variable
   file name on the computer instead of the old renaming hack.
+* Non-ASCII characters in on-calc file names are now passed to ld-tigcc in
+  urlencoded form (more portable).
 
 
 KTIGCC 1.06 (2006-11-25):
